@@ -1,4 +1,9 @@
 Jun 27, 2011 - chris
+o fixed a performance regression - when Transactions are enabled, the file
+	was frequently flushed via fsync() even if HAM_WRITE_THROUGH was not
+	set (thanks, Jake)
+
+Jun 26, 2011 - chris
 o the ./configure switch --enable-internal is now obsolte and enabled by
 	default
 
